# game1

./: .gitignore  Animation.h  CMakeLists.txt  GLLoad.h  GLStructs.h  Game.cpp  Game.h  Input.cpp  Input.h  Makefile  Player.h  README.md  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  String.cpp  String.h  Texture.cpp  Texture.h  Window.cpp  Window.h  default.glfs  default2.glvs
data/: default.glfs
data/fonts/: ter-x12n.pcf  ter-x14n.pcf  ter-x16b.pcf  ter-x16n.pcf  ter-x18n.pcf  ter-x20n.pcf  ter-x22b.pcf  ter-x24n.pcf  ter-x28b.pcf  ter-x28n.pcf  ter-x32b.pcf  ter-x32n.pcf
fonts/: ter-x12b.pcf  ter-x14b.pcf  ter-x18b.pcf  ter-x20b.pcf  ter-x22n.pcf  ter-x24b.pcf
